--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@progress/kendo-react-pdf": "^3.17.0",
     "@react-pdf/renderer": "^1.6.10",
     "@testing-library/jest-dom": "^4.2.4",
@@ -23,6 +24,7 @@
     "number-to-words": "^1.2.4",
     "pdf-viewer-reactjs": "^2.0.7",
     "react": "^16.13.1",
+    "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
